# rust-backend-boilerplate

./: .env  Cargo.toml  README.md  Rocket.toml  shell.nix
.direnv/: cache-.335733.f6ddd55d5f9  drv
migrations/2022-04-13-022132_create_posts/: up.sql
src/: main.rs  main.rs.bu  schema.rs
src/models/: posts.rs
